--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
                     id="bach" style="background-color: #b98982 !important;">Secret
                     Sauce</a></span></li>
               <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
-
                     style="background-color: #b98982 !important;">Wordle</a></span></li>
+              <li><span style="font-family: Rockwell;"><a href="wordfold/game.html"
+                    id="bach" style="background-color: #b98982 !important;">Word Fold</a></span></li>
             </ul>
           </div>
           <p></p>
