--- a/more.html
+++ b/more.html
@@ -15,8 +15,7 @@
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
         <p> </p>
-        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
-
+        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
             id="logo"></p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
@@ -26,8 +25,7 @@
           <strong></strong><strong><span style="font-family: Times New Roman;">email
               - htang6@wpi.edu</span></strong></div>
         <div style="color: #121387; background-color: #baf2a9;"><strong><span style="font-family: Times New Roman;">&nbsp;github
-              - </span></strong><strong><span style="font-family: Times New Roman;"><a
-
+              - </span></strong><strong><span style="font-family: Times New Roman;"><a
                 href="https://github.com/Langyyyyy">Langyyyyy (HanwenT2010)</a></span></strong></div>
         <div style="color: #121387; background-color: #baf2a9;"><br>
           <!-- end of content column: put your content above this line --> </div>
@@ -60,26 +58,20 @@
   document.getElementById('themeSelect').value = savedTheme;
 </script> <div id="tswcssbuttons">
             <ul>
-              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
-
+              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
                     style="background-color: #cf9dd0 !important;">Home</a></span></li>
               <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="aboutme.html" id="back"
-
+              <li><span style="font-family: Rockwell;"><a href="aboutme.html" id="back"
                     style="background-color: #ccffff !important;">About me</a></span></li>
               <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
-
+              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
                     style="background-color: #ff6666 !important;">Projects</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
-
+              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
                     style="background-color: #c8ffd2 !important;">More</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
-
+              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
                     id="bach" style="background-color: #b98982 !important;">Secret
                     Sauce</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
-
+              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
                     style="background-color: #b98982 !important;">Wordle</a></span></li>
             </ul>
           </div>
@@ -91,7 +83,8 @@
       <div id="tswfooter">
         <!-- start of footer section: insert your copyright notice, etc, here -->
         <p><span style="font-family: Lucida Calligraphy;"> Project for WPI
-            Launch CS 2025 </span></p>
+            Launch CS 2025- made by Hanwen Tang<br>
+          </span></p>
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
@@ -102,7 +95,6 @@
     seconds++;
     timerEl.textContent = `🔥 Time: ${seconds}s`;
   }, 1000);
-</script>
-    <script src="scripts.js"></script>
+</script> <script src="scripts.js"></script>
   </body>
 </html>
