--- a/secretsauce.html
+++ b/secretsauce.html
@@ -15,8 +15,7 @@
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
         <p> </p>
-        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 147px; height: 147px;"
-
+        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 147px; height: 147px;"
             id="logo"></p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
@@ -28,29 +27,24 @@
                 Visiting<br>
               </span></strong></p>
           <form action="feedback.php" method="post" id="tswfbform" accept-charset="UTF-8">
-            <strong><label for="tswname">Name</label></strong> <input name="fullname"
-
+            <strong><label for="tswname">Name</label></strong> <input name="fullname"
               style="max-width: 100%;" id="tswname" size="39" type="text"><br>
             &nbsp;<br>
-            <strong><label for="tswemail">Email</label></strong> <input style="max-width: 100%;"
-
+            <strong><label for="tswemail">Email</label></strong> <input style="max-width: 100%;"
               id="tswemail" name="email" size="39" type="text"><br>
             &nbsp;<br>
             <strong><label for="tswcomments">Comments</label></strong><br>
             &nbsp;<br>
-            <textarea rows="15" cols="45" name="comments" style="max-width: 100%;"
-
+            <textarea rows="15" cols="45" name="comments" style="max-width: 100%;"
 id="tswcomments"></textarea> <br>
             &nbsp;<br>
             <input id="tswsubmit" value="Send Feedback" type="submit"> </form>
-          <p><strong>Feedback Form from <a href="https://www.thesitewizard.com/"
-
+          <p><strong>Feedback Form from <a href="https://www.thesitewizard.com/"
                 target="_top">thesitewizard.com</a></strong></p>
           <p><br>
           </p>
           <p><br>
-            <strong><span style="font-family: Times New Roman;"></span></strong><strong><span
-
+            <strong><span style="font-family: Times New Roman;"></span></strong><strong><span
                 style="font-family: Times New Roman;"></span></strong><span style="font-family: Times New Roman;"></span><!-- end of content column: put your content above this line -->
           </p>
         </div>
@@ -83,25 +77,20 @@ id="tswcomments"></textarea> <br>
   document.getElementById('themeSelect').value = savedTheme;
 </script> <div id="tswcssbuttons">
             <ul>
-              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
-
+              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
                     style="background-color: #8fb3a3 !important;">Home</a></span></li>
               <span style="font-family: Rockwell;"> </span>
               <li><span style="font-family: Rockwell;"><a href="aboutme.html" id="back">About
                     me</a></span></li>
               <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
-
+              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
                     style="background-color: #b998b8 !important;">Projects</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
-
+              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
                     style="background-color: #b98982 !important;">More</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
-
+              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
                     id="bach" style="background-color: #b98982 !important;">Secret
                     Sauce</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
-
+              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
                     style="background-color: #b98982 !important;">Wordle</a></span></li>
             </ul>
           </div>
@@ -125,7 +114,6 @@ id="tswcomments"></textarea> <br>
     seconds++;
     timerEl.textContent = `🔥 Time: ${seconds}s`;
   }, 1000);
-</script>
-    <script src="scripts.js"></script>
+</script> <script src="scripts.js"></script>
   </body>
 </html>
