--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,8 @@
             id="logo"></p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
-        <div style="color: #121387; background-color: #baf2a9;" id="wor">
+        <div class="blended-box" id="wor">
+
           <!-- start of content column: insert your content here -->
           <h1 id="header"><strong>About Me<br>
             </strong></h1>
@@ -77,27 +78,14 @@
   document.getElementById('themeSelect').value = savedTheme;
 </script> <div id="tswcssbuttons">
             <ul>
-              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
-
-                    style="background-color: #cf9dd0 !important;">Home</a></span></li>
-              <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="aboutme.html" id="back"
-
-                    style="background-color: #ccffff !important;">About me</a></span></li>
-              <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
-
-                    style="background-color: #ff6666 !important;">Projects</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
-
-                    style="background-color: #c8ffd2 !important;">More</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
-
-                    id="bach" style="background-color: #b98982 !important;">Secret
-                    Sauce</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
-
-                    style="background-color: #b98982 !important;">Wordle</a></span></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About me</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="more.html">More</a></li>
+              <li><a href="secretsauce.html">Secret Sauce</a></li>
+              <li><a href="wordle.html">Wordle</a></li>
+              <li><a href="wordfold/game.html">Word Fold</a></li>
+              <li><a href="weatherapp.html">Weather App</a></li>
             </ul>
           </div>
           <p></p>
