--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             id="logo"></p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
-        <div id="tswcontproper" style="color: #121387; background-color: #baf2a9;">
+        <div class="blended-box" id="wor">
+
           <!-- start of content column: insert your content here -->
           <h1 id="header"><strong>Home</strong></h1>
           <strong> </strong>
@@ -69,27 +70,14 @@
   document.getElementById('themeSelect').value = savedTheme;
 </script> <div id="tswcssbuttons">
             <ul>
-              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
-
-                    style="background-color: #8fb3a3 !important;">Home</a></span></li>
-              <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="aboutme.html" id="back">About
-                    me</a></span></li>
-              <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
-
-                    style="background-color: #b998b8 !important;">Projects</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
-
-                    style="background-color: #b98982 !important;">More</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
-
-                    id="bach" style="background-color: #b98982 !important;">Secret
-                    Sauce</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
-                    style="background-color: #b98982 !important;">Wordle</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="wordfold/game.html"
-                    id="bach" style="background-color: #b98982 !important;">Word Fold</a></span></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About me</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="more.html">More</a></li>
+              <li><a href="secretsauce.html">Secret Sauce</a></li>
+              <li><a href="wordle.html">Wordle</a></li>
+              <li><a href="wordfold/game.html">Word Fold</a></li>
+              <li><a href="weatherapp.html">Weather App</a></li>
             </ul>
           </div>
           <p></p>
