--- a/projects.html
+++ b/projects.html
@@ -16,8 +16,10 @@
         <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
 
             id="logo"></p>
+      </div>
       <div id="tswcontent">
-        <div id="tswcontproper" style="color: #121387; background-color: #baf2a9;">
+        <div class="blended-box" id="wor">
+
           <h1 id="header"><strong>Projects</strong></h1>
           <div id="projectGrid" class="project-grid">
             <!-- cards will be injected here by JS --> </div>
@@ -51,14 +53,14 @@
   document.getElementById('themeSelect').value = savedTheme;
 </script> <div id="tswcssbuttons">
             <ul>
-              <li><a href="index.html" style="background-color: #cf9dd0 !important;">Home</a></li>
-              <li><a href="aboutme.html" style="background-color: #ccffff !important;">About
-                  me</a></li>
-              <li><a href="projects.html" style="background-color: #ff6666 !important;">Projects</a></li>
-              <li><a href="more.html" style="background-color: #c8ffd2 !important;">More</a></li>
-              <li><a href="secretsauce.html" style="background-color: #b98982 !important;">Secret
-                  Sauce</a></li>
-              <li><a href="wordle.html" style="background-color: #b98982 !important;">Wordle</a></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About me</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="more.html">More</a></li>
+              <li><a href="secretsauce.html">Secret Sauce</a></li>
+              <li><a href="wordle.html">Wordle</a></li>
+              <li><a href="wordfold/game.html">Word Fold</a></li>
+              <li><a href="weatherapp.html">Weather App</a></li>
             </ul>
           </div>
           <p></p>
