--- a/secretsauce.html
+++ b/secretsauce.html
@@ -20,7 +20,8 @@
             id="logo"></p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
-        <div id="tswcontproper" style="color: #121387; background-color: #baf2a9;">
+        <div class="blended-box" id="wor">
+
           <!-- start of content column: insert your content here -->
           <h1 id="header"><strong>Feedback/Comments!</strong></h1>
           <strong> </strong>
