--- a/wordle.html
+++ b/wordle.html
@@ -96,13 +96,15 @@
             id="logo"></p>
       </div>
       <div id="tswcontent">
-        <div style="color: #121387; background-color: #baf2a9;" id="wor">
+        <div class="blended-box" id="wor">
+
           <h1 id="header"><strong>Wordle</strong></h1>
           <p>Word list courtesy of <a href="https://gist.github.com/kcwhite/bb598f1b3017b5477cb818c9b086a5d9"
 
               target="_blank" rel="noopener noreferrer">kcwhite’s public word
               list</a> — thank you!</p>
-          <div id="wordleContainer">
+              <div id="wordleContainer" class="blended-box">
+
             <div class="board" id="board"></div>
             <input id="guessInput" maxlength="5" placeholder="Type 5-letter word"
 
