--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
         <p> </p>
-        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 147px; height: 147px;"
+        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
 
             id="logo"></p>
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
         <div class="blended-box" id="wor">
-
           <!-- start of content column: insert your content here -->
           <h1 id="header"><strong>Home</strong></h1>
           <strong> </strong>
@@ -74,10 +73,10 @@
               <li><a href="aboutme.html">About me</a></li>
               <li><a href="projects.html">Projects</a></li>
               <li><a href="more.html">More</a></li>
-              <li><a href="secretsauce.html">Secret Sauce</a></li>
               <li><a href="wordle.html">Wordle</a></li>
               <li><a href="wordfold/game.html">Word Fold</a></li>
-              <li><a href="weatherapp.html">Weather App</a></li>
+              <li><a href="weatherapp/index.html">Weather App</a></li>
+              <li><a href="secretsauce.html">Contact Me</a></li>
             </ul>
           </div>
           <p></p>
@@ -100,7 +99,6 @@
     seconds++;
     timerEl.textContent = `🔥 Time: ${seconds}s`;
   }, 1000);
-</script>
-    <script src="scripts.js"></script>
+</script> <script src="scripts.js"></script>
   </body>
 </html>
