--- a/more.html
+++ b/more.html
@@ -21,17 +21,14 @@
         <!-- end of header section: insert your logo, etc, above this line --> </div>
       <div id="tswcontent">
         <div class="blended-box" id="wor">
-
           <!-- start of content column: insert your content here -->
-          <h1 id="header"><strong>More</strong></h1>
-          <strong></strong><strong><span style="font-family: Times New Roman;">email
-              - htang6@wpi.edu</span></strong></div>
-        <div style="color: #121387; background-color: #baf2a9;"><strong><span style="font-family: Times New Roman;">&nbsp;github
-              - </span></strong><strong><span style="font-family: Times New Roman;"><a
+          <h1>More</h1>
+          <p><strong>Email:</strong> <a href="mailto:htang6@wpi.edu">htang6@wpi.edu</a></p>
+          <p><strong>GitHub:</strong> <a href="https://github.com/Langyyyyy"
 
-                href="https://github.com/Langyyyyy">Langyyyyy (HanwenT2010)</a></span></strong></div>
-        <div style="color: #121387; background-color: #baf2a9;"><br>
-          <!-- end of content column: put your content above this line --> </div>
+              target="_blank" rel="noopener noreferrer">Langyyyyy (HanwenT2010)</a></p>
+          <!-- end of content column: put your content above this line -->
+        </div>
       </div>
       <div id="tswsidecol">
         <div id="tswsideproper">
@@ -61,27 +58,14 @@
   document.getElementById('themeSelect').value = savedTheme;
 </script> <div id="tswcssbuttons">
             <ul>
-              <li><span style="font-family: Rockwell;"><a href="index.html" id="backdds"
-
-                    style="background-color: #cf9dd0 !important;">Home</a></span></li>
-              <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="aboutme.html" id="back"
-
-                    style="background-color: #ccffff !important;">About me</a></span></li>
-              <span style="font-family: Rockwell;"> </span>
-              <li><span style="font-family: Rockwell;"><a href="projects.html" id="bach"
-
-                    style="background-color: #ff6666 !important;">Projects</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="more.html" id="bach"
-
-                    style="background-color: #c8ffd2 !important;">More</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="secretsauce.html"
-
-                    id="bach" style="background-color: #b98982 !important;">Secret
-                    Sauce</a></span></li>
-              <li><span style="font-family: Rockwell;"><a href="wordle.html" id="bach"
-
-                    style="background-color: #b98982 !important;">Wordle</a></span></li>
+              <li><a href="index.html">Home</a></li>
+              <li><a href="aboutme.html">About me</a></li>
+              <li><a href="projects.html">Projects</a></li>
+              <li><a href="more.html">More</a></li>
+              <li><a href="wordle.html">Wordle</a></li>
+              <li><a href="wordfold/game.html">Word Fold</a></li>
+              <li><a href="weatherapp/index.html">Weather App</a></li>
+              <li><a href="secretsauce.html">Contact Me</a></li>
             </ul>
           </div>
           <p></p>
