--- a/aboutme.html
+++ b/aboutme.html
@@ -82,10 +82,10 @@
               <li><a href="aboutme.html">About me</a></li>
               <li><a href="projects.html">Projects</a></li>
               <li><a href="more.html">More</a></li>
-              <li><a href="secretsauce.html">Secret Sauce</a></li>
               <li><a href="wordle.html">Wordle</a></li>
               <li><a href="wordfold/game.html">Word Fold</a></li>
-              <li><a href="weatherapp.html">Weather App</a></li>
+              <li><a href="weatherapp/index.html">Weather App</a></li>
+              <li><a href="secretsauce.html">Contact Me</a></li>
             </ul>
           </div>
           <p></p>
