--- a/wordle.html
+++ b/wordle.html
@@ -87,7 +87,7 @@
     </style>
   </head>
   <body class="theme-default">
-    <div id="timer">🔥 Time: 0s</div>
+    <div id="timer">Loading countdown...</div>
     <div id="tswcontainer">
       <div id="tswheader">
         <p></p>
@@ -245,13 +245,6 @@
           </span></p>
       </div>
     </div>
-    <script>
-  let seconds = 0;
-  const timerEl = document.getElementById("timer");
-  setInterval(() => {
-    seconds++;
-    timerEl.textContent = `🔥 Time: ${seconds}s`;
-  }, 1000);
-</script> <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
