--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="tswnavbar.css">
   </head>
   <body class="theme-default">
-    <div id="timer">🔥 Time: 0s</div>
+    <div id="timer">Loading countdown...</div>
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
@@ -92,13 +92,6 @@
         <!-- end of footer section: insert your copyright notice, etc, above this line -->
       </div>
     </div>
-    <script>
-  let seconds = 0;
-  const timerEl = document.getElementById("timer");
-  setInterval(() => {
-    seconds++;
-    timerEl.textContent = `🔥 Time: ${seconds}s`;
-  }, 1000);
-</script> <script src="scripts.js"></script>
+    <script src="scripts.js"></script>
   </body>
 </html>
