--- a/secretsauce.html
+++ b/secretsauce.html
@@ -27,8 +27,8 @@
           <p> <strong><span style="font-family: Times New Roman;">Thank You for
                 Visiting<br>
               </span></strong></p>
-          <form action="feedback.php" method="post" id="tswfbform" accept-charset="UTF-8">
-            <strong><label for="tswname">Name</label></strong> <input name="fullname"
+          <form action="https://formspree.io/f/xwpbabpk" method="POST" id="tswfbform">
+            <strong><label for="tswname">Name</label></strong> <input name="name"
 
               style="max-width: 100%;" id="tswname" size="39" type="text"><br>
             &nbsp;<br>
@@ -36,16 +36,13 @@
 
               id="tswemail" name="email" size="39" type="text"><br>
             &nbsp;<br>
-            <strong><label for="tswcomments">Comments</label></strong><br>
+            <strong><label for="tswcomments">Message</label></strong><br>
             &nbsp;<br>
-            <textarea rows="15" cols="45" name="comments" style="max-width: 100%;"
+            <textarea rows="15" cols="45" name="message" style="max-width: 100%;"
 
 id="tswcomments"></textarea> <br>
             &nbsp;<br>
             <input id="tswsubmit" value="Send Feedback" type="submit"> </form>
-          <p><strong>Feedback Form from <a href="https://www.thesitewizard.com/"
-
-                target="_top">thesitewizard.com</a></strong></p>
           <p><br>
           </p>
           <p><br>
