--- a/projects.html
+++ b/projects.html
@@ -13,9 +13,7 @@
     <div id="timer">Loading countdown...</div>
     <div id="tswcontainer">
       <div id="tswheader">
-        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
-
-            id="logo"></p>
+        <img src="images/logo.png" alt="Hanwen's Logo" id="logo">
       </div>
       <div id="tswcontent">
         <div class="blended-box" id="wor">
