--- a/secretsauce.html
+++ b/secretsauce.html
@@ -14,11 +14,8 @@
     <div id="tswcontainer">
       <div id="tswheader">
         <!-- start of header section: insert your logo, etc, here -->
-        <p> </p>
-        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
-
-            id="logo"></p>
-        <!-- end of header section: insert your logo, etc, above this line --> </div>
+        <img src="images/logo.png" alt="Hanwen's Logo" id="logo">
+        <!-- end of header section: insert your logo, etc, above this line --></div>
       <div id="tswcontent">
         <div class="blended-box" id="wor">
           <!-- start of content column: insert your content here -->
