--- a/wordle.html
+++ b/wordle.html
@@ -63,7 +63,6 @@
       #wordleContainer {
         text-align: center;
         color: #121387;
-        background-color: #baf2a9;
         padding: 20px;
         margin-top: 20px;
         border-radius: 8px;
@@ -90,10 +89,7 @@
     <div id="timer">Loading countdown...</div>
     <div id="tswcontainer">
       <div id="tswheader">
-        <p></p>
-        <p>&nbsp;<img src="images/logo.png" alt="Hanwen's Logo" style="width: 209px; height: 209px;"
-
-            id="logo"></p>
+        <img src="images/logo.png" alt="Hanwen's Logo" id="logo">
       </div>
       <div id="tswcontent">
         <div class="blended-box" id="wor">
