--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
           <p> <strong><span style="font-family: Times New Roman;">I am 15 y/o</span></strong></p>
           <strong><span style="font-family: Times New Roman;">I enjoy
               basketball, soccer,</span></strong><strong><span style="font-family: Times New Roman;">
-              flute, debate, martial arts, designing, and science olympiad</span></strong>
+              flute, science olympiad, martial arts, designing, and debate </span></strong>
           <p><strong><span style="font-family: Times New Roman;">I also do some
                 narrative writing and woodworking<br>
               </span></strong></p>
