--- a/secretsauce.html
+++ b/secretsauce.html
@@ -20,33 +20,25 @@
         <div class="blended-box" id="wor">
           <!-- start of content column: insert your content here -->
           <h1>Contact Me</h1>
-          <strong> </strong>
-          <p> <strong><span style="font-family: Times New Roman;">Thank You for
-                Visiting<br>
-              </span></strong></p>
-          <form action="https://formspree.io/f/xwpbabpk" method="POST" id="tswfbform">
-            <strong><label for="tswname">Name</label></strong> <input name="name"
-
-              style="max-width: 100%;" id="tswname" size="39" type="text"><br>
-            &nbsp;<br>
-            <strong><label for="tswemail">Email</label></strong> <input style="max-width: 100%;"
-
-              id="tswemail" name="email" size="39" type="text"><br>
-            &nbsp;<br>
-            <strong><label for="tswcomments">Message</label></strong><br>
-            &nbsp;<br>
-            <textarea rows="15" cols="45" name="message" style="max-width: 100%;"
-
-id="tswcomments"></textarea> <br>
-            &nbsp;<br>
-            <input id="tswsubmit" value="Send Feedback" type="submit"> </form>
-          <p><br>
-          </p>
-          <p><br>
-            <strong><span style="font-family: Times New Roman;"></span></strong><strong><span
-
-                style="font-family: Times New Roman;"></span></strong><span style="font-family: Times New Roman;"></span><!-- end of content column: put your content above this line -->
-          </p>
+          <p>Thank you for visiting! Feel free to send me a message below.</p>
+          <form action="https://formspree.io/f/xwpbabpk" method="POST" id="contactForm">
+            <div class="form-group">
+              <label for="name">Name</label>
+              <input id="name" name="name" required="" type="text">
+            </div>
+            <div class="form-group">
+              <label for="email">Email</label>
+              <input id="email" name="email" required="" type="email">
+            </div>
+            <!-- Honeypot field for spam protection. Bots will fill this out, humans won't. -->
+            <input name="_gotcha" style="display:none !important" type="text">
+            <div class="form-group">
+              <label for="message">Message</label>
+              <textarea id="message" name="message" required="" rows="8"></textarea>
+            </div>
+            <button id="tswsubmit" type="submit">Send Feedback</button>
+          </form>
+          <!-- end of content column: put your content above this line -->
         </div>
       </div>
       <div id="tswsidecol">
