fixed viewer bug

--- a/projects.html
+++ b/projects.html
@@ -73,5 +73,6 @@
     </div>
     <script src="scripts.js"></script>
     <script src="projects.js"></script>
+    <script src="visitor-counter.js"></script>
   </body>
 </html>
