--- a/weatherapp/index.html
+++ b/weatherapp/index.html
@@ -109,5 +109,6 @@
       connectBtn.click(); // Programmatically click "Connect"
     });
   </script>
+  <script src="../visitor-counter.js"></script>
 </body>
 </html>
