--- a/wordfold/game.html
+++ b/wordfold/game.html
@@ -168,6 +168,7 @@
       loadBoard(1); // Pass 1-based ID to loadBoard
     };
   </script>
+  <script src="../visitor-counter.js"></script>
 </body>
 
 </html>
